2008-06-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (module_configure_flags): do not add
	--with-dynamic-ffi & --with-dynamic-modules

2008-06-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (encflags): add -Emisc 1:1 so that syscalls tests
	pass (user names may be 8bit)

2008-06-02  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (OS:ERRNO, OS:STRERROR): implement
	* modules/syscalls/posix.lisp (OS:ERRNO, OS:STRERROR): export

2008-06-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (IMPNOTES): rename to IMPNOTES_FILES to avoid
	conflict with $IMPNOTES which is used by IMPNOTES-ROOT

2008-06-02  Sam Steingold  <sds@gnu.org>

	* condition.lisp (mecase): ECASE for DEFMACRO: print the form in
	the error message
	* foreign1.lisp (parse-c-function, DEF-C-VAR): use SYS::MECASE
	instead of ECASE for a better error message

2008-06-01  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (setjmp) [__MINGW32__]: define as _setjmp (but do not
	define longjmp as _longjmp because the latter does not exist)
	This is only necessary for lightning.
	Thanks to Yaroslav Kavenchuk <kavenchuk@tut.by> for investigation.

2008-06-01  Sam Steingold  <sds@gnu.org>

	* spvw.d (init_object_tab) [WIDE_HARD]: add :WORD-SIZE=64 to *FEATURES*
	* built.d (built_flags): show all WIDE_* variants

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/builtin_strlen.m4 (CL_BUILTIN_STRLEN): Assume ANSI C or C++.
	* m4/mprotect.m4 (CL_MPROTECT): Likewise.
	* m4/select.m4 (CL_SELECT): Likewise.
	* m4/signal.m4 (CL_SIGNAL_REINSTALL, CL_SIGNAL_UNBLOCK,
	CL_SIGNAL_BLOCK_OTHERS, CL_SIGACTION_REINSTALL, CL_SIGACTION_UNBLOCK):
	Likewise.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_HEADER_STAT invocation.
	* unix.d: Ignore STAT_MACROS_BROKEN.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_HEADER_TIME invocation. Instead simply test
	for <time.h> and <sys/time.h>.
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): Likewise.